# tictactoe

./: LICENSE  README.md  tictactoe.cabal
app/: Client.hs  Server.hs
src/: Matrix.hs  Types.hs
