cabal-version:      3.0
name:               tictactoe
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             tt
maintainer:         ngothtam.me@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
executable server
    import:           warnings
    main-is:          Server.hs
    build-depends:    base,
                      containers,
                      random,
                      warp,
                      wai,
                      http-types,
                      bytestring,
                      aeson
    other-modules:    Matrix, Types
    hs-source-dirs:   app, src
    default-language: Haskell2010

executable client
    import:           warnings
    main-is:          Client.hs
    build-depends:    base,
                      containers,
                      random,
                      warp,
                      wai,
                      http-types,
                      bytestring,
                      aeson,
                      http-conduit
    other-modules:    Matrix, Types
    hs-source-dirs:   app, src
    default-language: Haskell2010
